# synthsense

./: .env.example  .gitignore  README.md  docker-compose.yaml  init-db.sql  run-tests.sh
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 279564dc8d56_add_persona_conversation_tables.py  2ad7adf94450_drop_persona_conversation_and_persona_.py  59860e833eb7_remove_persona_conversation_tables.py  e59d1ac7d912_initial_schema.py
backend/app/api/: auth.py  experiments.py  personas.py  simulations.py  streaming.py
backend/app/auth/: dependencies.py  jwt_handler.py  password_handler.py
backend/app/graphql/: __init__.py  main.py  schema.py
backend/app/graphql/mutations/: __init__.py  auth.py  experiment.py  persona.py  simulation.py
backend/app/graphql/resolvers/: __init__.py  experiment.py  persona.py  user.py
backend/app/models/: __init__.py  experiment.py  persona.py  survey.py  user.py
backend/app/schemas/: experiment.py  persona.py  survey.py  user.py
backend/app/services/: ai_service.py  persona_service.py  simulation_service.py
backend/scripts/: dev.py  manage_db.py  start.sh  startup.py
backend/tests/: README.md  conftest.py  test_graphql_live.py  test_simple_integration.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: seed-personas.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AccountSettingsDialog.tsx  AuthDialog.tsx  (+7 more)
(+12 files in other folders)
